--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;User Id=postgres;Password=postgres;Database=TemplateWebAPIDB"
+    "DefaultConnection": "Host=localhost;Port=5432;User Id=postgres;Password=password;Database=TemplateWebAPIDB"
   },
   "Logging": {
     "LogLevel": {
