--- a/application/application.csproj
+++ b/application/application.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
+    <Nullable>disable</Nullable>
   </PropertyGroup>
 	<ItemGroup>
 		<PackageReference Include="Dapper" Version="2.1.28" />
